--- a/public/01-3-house.html
+++ b/public/01-3-house.html
@@ -76,7 +76,7 @@
 						<div class="container-fluid">
 							<div class="page-head__row row align-items-center">
 								<div class="col">
-									<nav class="swiper breadcrumb-slider--js" aria-label="breadcrumb">
+									<nav class="swiper freeMode-slider--js" aria-label="breadcrumb">
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Объекты</span>
 													<meta itemprop="position" content="1"/></a></li>
@@ -219,45 +219,45 @@
 					</div>
 					<!-- end sObjectDetails-->
 					<div class="container-fluid mt-4">
-						<div class="toggle-block">
-							<div class="toggle-block__row row">
-								<div class="col-auto">
-									<a class="toggleBtn btn btn-outline-light active" href="#">
+						<div class="toggle-block swiper freeMode-slider freeMode-slider--js">
+							<div class="swiper-wrapper">
+								<div class="swiper-slide">
+									<a class="toggle-block__btn btn btn-outline-light active" href="#">
 										<svg class="icon icon-list ">
 											<use xlink:href="img/svg/sprite.svg#list"></use>
 										</svg><span>Список</span>
 									</a>
 								</div>
-								<div class="col-auto">
-									<a class="toggleBtn btn btn-outline-light" href="#">
+								<div class="swiper-slide">
+									<a class="toggle-block__btn btn btn-outline-light" href="#">
 										<svg class="icon icon-tile ">
 											<use xlink:href="img/svg/sprite.svg#tile"></use>
 										</svg><span>Шахматка</span>
 									</a>
 								</div>
-								<div class="col-auto">
-									<a class="toggleBtn btn btn-outline-light" href="#">
+								<div class="swiper-slide">
+									<a class="toggle-block__btn btn btn-outline-light" href="#">
 										<svg class="icon icon-tasks ">
 											<use xlink:href="img/svg/sprite.svg#tasks"></use>
 										</svg><span>Задачи</span>
 									</a>
 								</div>
-								<div class="col-auto">
-									<a class="toggleBtn btn btn-outline-light" href="#">
+								<div class="swiper-slide">
+									<a class="toggle-block__btn btn btn-outline-light" href="#">
 										<svg class="icon icon-gantt ">
 											<use xlink:href="img/svg/sprite.svg#gantt"></use>
 										</svg><span>График работ</span>
 									</a>
 								</div>
-								<div class="col-auto">
-									<a class="toggleBtn btn btn-outline-light" href="#">
+								<div class="swiper-slide">
+									<a class="toggle-block__btn btn btn-outline-light" href="#">
 										<svg class="icon icon-info ">
 											<use xlink:href="img/svg/sprite.svg#info"></use>
 										</svg><span>Информация</span>
 									</a>
 								</div>
-								<div class="col-auto">
-									<a class="toggleBtn btn btn-outline-light" href="#">
+								<div class="swiper-slide">
+									<a class="toggle-block__btn btn btn-outline-light" href="#">
 										<svg class="icon icon-pen ">
 											<use xlink:href="img/svg/sprite.svg#pen"></use>
 										</svg><span>Заметки</span>
