--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 						<div class="container-fluid">
 							<div class="page-head__row row align-items-center">
 								<div class="col">
-									<nav class="swiper breadcrumb-slider--js" aria-label="breadcrumb">
+									<nav class="swiper freeMode-slider--js" aria-label="breadcrumb">
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Объекты</span>
 													<meta itemprop="position" content="1"/></a></li>
