--- a/public/01-2-object.html
+++ b/public/01-2-object.html
@@ -415,26 +415,360 @@
 							</div>
 							<div class="main-table">
 								<table>
-									<tr>
-										<th>Объект</th>
-										<th>Под</th>
-										<th>Эт</th>
-										<th>Кв</th>
-										<th>Пом</th>
-										<th>Площ</th>
-										<th>Задачи</th>
-										<th>Прогресс</th>
-										<th>Сроки</th>
-									</tr>
-									<tr>
-										<td class="add-more" colspan="9">
-											<a class="main-table__add-new" href="#">
-												<svg class="icon icon-add ">
-													<use xlink:href="img/svg/sprite.svg#add"></use>
-												</svg>Добавить дом
-											</a>
-										</td>
-									</tr>
+									<thead>
+										<tr>
+											<th>Объект</th>
+											<th>Под</th>
+											<th>Эт</th>
+											<th>Кв</th>
+											<th>Пом</th>
+											<th>Площ</th>
+											<th>Задачи</th>
+											<th>Прогресс</th>
+											<th>Сроки</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td class="add-more" colspan="9">
+												<a class="main-table__add-new" href="#">
+													<svg class="icon icon-add ">
+														<use xlink:href="img/svg/sprite.svg#add"></use>
+													</svg>Добавить дом
+												</a>
+											</td>
+										</tr>
+												<tr>
+													<td>
+														<div class="main-table__title">
+															<a class="main-table__toggle-dropdown" href="#">
+																<svg class="icon icon-chevron-right ">
+																	<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																</svg>
+															</a>
+															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+															</label>
+															<div class="h3">1. Дом №1</div>
+														</div>
+													</td>
+													<td>3</td>
+													<td>-</td>
+													<td>130</td>
+													<td>268</td>
+													<td>1300 м²</td>
+													<td>
+														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>321</span>/433
+														</div>
+													</td>
+													<td>
+														<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>67%
+														</div>
+													</td>
+													<td>11 ноя 23 – 11 фев 24</td>
+												</tr>
+												<tr class="active">
+													<td>
+														<div class="main-table__title">
+															<a class="main-table__toggle-dropdown" href="#">
+																<svg class="icon icon-chevron-right ">
+																	<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																</svg>
+															</a>
+															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+															</label>
+															<div class="h3">2. Дом №2</div>
+														</div>
+													</td>
+													<td>4</td>
+													<td>-</td>
+													<td>126</td>
+													<td>280</td>
+													<td>1291 м²</td>
+													<td>
+														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
+														</div>
+													</td>
+													<td>
+														<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>67%
+														</div>
+													</td>
+													<td>15 ноя 23 – 10 фев 24</td>
+													<tr class="inner-level">
+														<td colspan="9">
+															<table>
+																<tr>
+																	<td class="add-more" colspan="9">
+																		<a class="main-table__add-new" href="#">
+																			<svg class="icon icon-add ">
+																				<use xlink:href="img/svg/sprite.svg#add"></use>
+																			</svg>Добавить подъезд
+																		</a>
+																	</td>
+																</tr>
+																		<tr>
+																			<td> 
+																				<div class="main-table__title">
+																					<a class="main-table__toggle-dropdown" href="#">
+																						<svg class="icon icon-chevron-right ">
+																							<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																						</svg>
+																					</a>
+																					<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																					</label>
+																					<p>2.1. Подъезд №1</p>
+																				</div>
+																			</td>
+																			<td>-</td>
+																			<td>12</td>
+																			<td>36</td>
+																			<td>104</td>
+																			<td>696 м²</td>
+																			<td>
+																				<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>321</span>/433
+																				</div>
+																			</td>
+																			<td>
+																				<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>59%
+																				</div>
+																			</td>
+																			<td>15 ноя 23 – 10 фев 24</td>
+																		</tr>
+																		<tr class="active">
+																			<td> 
+																				<div class="main-table__title">
+																					<a class="main-table__toggle-dropdown" href="#">
+																						<svg class="icon icon-chevron-right ">
+																							<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																						</svg>
+																					</a>
+																					<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																					</label>
+																					<p>2.1. Подъезд №2</p>
+																				</div>
+																			</td>
+																			<td>-</td>
+																			<td>12</td>
+																			<td>36</td>
+																			<td>104</td>
+																			<td>696 м²</td>
+																			<td>
+																				<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>321</span>/433
+																				</div>
+																			</td>
+																			<td>
+																				<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>59%
+																				</div>
+																			</td>
+																			<td>15 ноя 23 – 10 фев 24</td>
+																			<tr class="inner-level">
+																				<td colspan="9">
+																					<table>
+																						<tr>
+																							<td class="add-more" colspan="9">
+																								<a class="main-table__add-new" href="#">
+																									<svg class="icon icon-add ">
+																										<use xlink:href="img/svg/sprite.svg#add"></use>
+																									</svg>Добавить этаж
+																								</a>
+																							</td>
+																						</tr>
+																								<tr>
+																									<td> 
+																										<div class="main-table__title">
+																											<a class="main-table__toggle-dropdown" href="#">
+																												<svg class="icon icon-chevron-right ">
+																													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																												</svg>
+																											</a>
+																											<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																											</label>
+																											<p>2.2.1. Этаж №1</p>
+																										</div>
+																									</td>
+																									<td>-</td>
+																									<td>-</td>
+																									<td>16</td>
+																									<td>66</td>
+																									<td>436 м²</td>
+																									<td>
+																										<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
+																										</div>
+																									</td>
+																									<td>
+																										<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>56%
+																										</div>
+																									</td>
+																									<td>15 ноя 23 – 10 фев 24</td>
+																								</tr>
+																								<tr class="active">
+																									<td> 
+																										<div class="main-table__title">
+																											<a class="main-table__toggle-dropdown" href="#">
+																												<svg class="icon icon-chevron-right ">
+																													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																												</svg>
+																											</a>
+																											<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																											</label>
+																											<p>2.2.1. Этаж №2</p>
+																										</div>
+																									</td>
+																									<td>-</td>
+																									<td>-</td>
+																									<td>16</td>
+																									<td>66</td>
+																									<td>436 м²</td>
+																									<td>
+																										<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
+																										</div>
+																									</td>
+																									<td>
+																										<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>56%
+																										</div>
+																									</td>
+																									<td>15 ноя 23 – 10 фев 24</td>
+																									<tr class="inner-level">
+																										<td colspan="9">
+																											<table>
+																												<tr>
+																													<td class="add-more" colspan="9">
+																														<a class="main-table__add-new" href="#">
+																															<svg class="icon icon-add ">
+																																<use xlink:href="img/svg/sprite.svg#add"></use>
+																															</svg>Добавить квартиру
+																														</a>
+																													</td>
+																												</tr>
+																														<tr>
+																															<td> 
+																																<div class="main-table__title">
+																																	<a class="main-table__toggle-dropdown" href="#">
+																																		<svg class="icon icon-chevron-right ">
+																																			<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																																		</svg>
+																																	</a>
+																																	<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																																	</label>
+																																	<p>2.2.2.1. Квартира №27</p>
+																																</div>
+																															</td>
+																															<td>-</td>
+																															<td>-</td>
+																															<td>-</td>
+																															<td>120</td>
+																															<td>426 м²</td>
+																															<td>
+																																<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>15</span>/45
+																																</div>
+																															</td>
+																															<td>
+																																<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>19%
+																																</div>
+																															</td>
+																															<td>15 ноя 23 – 10 фев 24</td>
+																														</tr>
+																														<tr class="active">
+																															<td> 
+																																<div class="main-table__title">
+																																	<a class="main-table__toggle-dropdown" href="#">
+																																		<svg class="icon icon-chevron-right ">
+																																			<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+																																		</svg>
+																																	</a>
+																																	<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																																	</label>
+																																	<p>2.2.2.1. Квартира №27</p>
+																																</div>
+																															</td>
+																															<td>-</td>
+																															<td>-</td>
+																															<td>-</td>
+																															<td>120</td>
+																															<td>426 м²</td>
+																															<td>
+																																<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>15</span>/45
+																																</div>
+																															</td>
+																															<td>
+																																<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>19%
+																																</div>
+																															</td>
+																															<td>15 ноя 23 – 10 фев 24</td>
+																															<tr class="inner-level">
+																																<td colspan="9">
+																																	<table>
+																																		<tr>
+																																			<td class="add-more" colspan="9">
+																																				<a class="main-table__add-new" href="#">
+																																					<svg class="icon icon-add ">
+																																						<use xlink:href="img/svg/sprite.svg#add"></use>
+																																					</svg>Добавить помещение
+																																				</a>
+																																			</td>
+																																		</tr>
+																																				<tr>
+																																					<td> 
+																																						<div class="main-table__title">
+																																							<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																																							</label>
+																																							<p>2.2.2.2.1. Кухня</p>
+																																						</div>
+																																					</td>
+																																					<td>-</td>
+																																					<td>-</td>
+																																					<td>-</td>
+																																					<td>-</td>
+																																					<td>546 м²</td>
+																																					<td>
+																																						<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>321</span>/433
+																																						</div>
+																																					</td>
+																																					<td>
+																																						<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>90%
+																																						</div>
+																																					</td>
+																																					<td>15 ноя 23 – 10 фев 24</td>
+																																				</tr>
+																																				<tr>
+																																					<td> 
+																																						<div class="main-table__title">
+																																							<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
+																																							</label>
+																																							<p>2.2.2.2.1. Санузел</p>
+																																						</div>
+																																					</td>
+																																					<td>-</td>
+																																					<td>-</td>
+																																					<td>-</td>
+																																					<td>-</td>
+																																					<td>546 м²</td>
+																																					<td>
+																																						<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>321</span>/433
+																																						</div>
+																																					</td>
+																																					<td>
+																																						<div class="main-table__progress"><img src="img/svg/finish.svg" alt="" loading="lazy"/>90%
+																																						</div>
+																																					</td>
+																																					<td>15 ноя 23 – 10 фев 24</td>
+																																				</tr>
+																																	</table>
+																																</td>
+																															</tr>
+																														</tr>
+																											</table>
+																										</td>
+																									</tr>
+																								</tr>
+																					</table>
+																				</td>
+																			</tr>
+																		</tr>
+															</table>
+														</td>
+													</tr>
+												</tr>
+									</tbody>
 								</table>
 							</div>
 						</div>
