--- a/public/01-house-d.html
+++ b/public/01-house-d.html
@@ -61,8 +61,10 @@
 									</svg><span>Документы</span></a></li>
 						</ul>
 					</div>
-					<a class="aside-wrap__avatar" href="#"><span>МИ</span><img src="img/avatar.jpg" alt="" loading="lazy"/>
-					</a>
+					<div class="avatar-wrap">
+						<a class="avatar" href="#"><span>МИ</span><img src="img/avatar.jpg" alt="" loading="lazy"/>
+						</a>
+					</div>
 					<a class="aside-wrap__settings" href="#">
 						<svg class="icon icon-settings ">
 							<use xlink:href="img/svg/sprite.svg#settings"></use>
