--- a/public/02-create-task-d.html
+++ b/public/02-create-task-d.html
@@ -32,17 +32,23 @@
 				<div class="sCreateObject__body">
 					<div class="sCreateObject__left-side">
 						<h2>1. Натяжка потолка</h2>
-						<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
-							<div class="custom-input-wrap__line">
+						<div class="sCreateObject__main-row row">
+							<div class="col-12">
+								<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
+									<div class="custom-input-wrap__line">
+									</div>
+								</div>
+							</div>
+							<div class="col-12">
+								<div class="sCreateObject__input-wrap form-group"><textarea class="sCreateObject__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
+								</div>
+								<!-- +e.input-wrap-->
 							</div>
 						</div>
-						<div class="sCreateObject__input-wrap form-group"><textarea class="sCreateObject__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
-						</div>
-						<!-- +e.input-wrap-->
 					</div>
 					<div class="sCreateObject__right-side">
 						<div class="sCreateObject__row row">
-							<div class="col-12 d-none d-md-block">
+							<div class="col-12">
 								<div class="sCreateObject__item">
 									<p>Статус проекта</p>
 									<div class="select-status">
@@ -55,7 +61,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-12 d-none d-md-block">
+							<div class="col-12">
 								<div class="sCreateObject__item">
 									<p>Бригада</p><a href="#">Не выбрано</a>
 								</div>
