--- a/public/02-edit-room.html
+++ b/public/02-edit-room.html
@@ -44,6 +44,21 @@
 								</div>
 								<!-- +e.input-wrap-->
 							</div>
+							<div class="col-12">
+								<div class="plan-block"><img class="res-i" src="img/plan-d.png" alt="">
+									<div class="plan-block__info">
+										<p class="row"><span class="col">Площадь</span><span class="col-auto">32</span></p>
+										<p class="row"><span class="col">Площадь стен</span><span class="col-auto">324</span></p>
+										<p class="row"><span class="col">Площадь потолка</span><span class="col-auto">322</span></p>
+										<p class="row"><span class="col">Площадь пола</span><span class="col-auto">322</span></p>
+										<a class="plan-block__edit" href="#">Редактировать
+											<svg class="icon icon-edit ">
+												<use xlink:href="img/svg/sprite.svg#edit"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="sCreateObject__right-side">
