--- a/public/02-edit-task-d.html
+++ b/public/02-edit-task-d.html
@@ -34,15 +34,48 @@
 						<h2>Редактирование задачи</h2>
 						<div class="sCreateObject__main-row row">
 							<div class="col-12">
-								<div class="custom-input-wrap form-group"><input class="custom-input-wrap__input form-control" name="text" type="text" placeholder="Введите название"/>
-									<div class="custom-input-wrap__line">
-									</div>
+								<div class="custom-select-wrap custom-select-wrap--third-type">
+									<select class="basic-select basic-select--js" data-placeholder="Выберите наименование работы">
+										<option></option>
+										<option>1</option>
+										<option>2</option>
+										<option>3</option>
+										<option>4</option>
+										<option>5</option>
+										<option>6</option>
+										<option>7</option>
+										<option>8</option>
+										<option>9</option>
+										<option>10</option>
+									</select>
+								</div>
+							</div>
+							<div class="col-12">
+								<div class="custom-input-label form-group">
+									<label><input class="custom-input-label__input form-control" name="Количество слоев" type="text" placeholder="Количество слоев"/><span class="custom-input-label__input-title">Количество слоев</span>
+									</label>
+								</div>
+							</div>
+							<div class="col-12">
+								<div class="custom-input-label form-group">
+									<label><input class="custom-input-label__input form-control" disabled="disabled" name="Требуемый материал" type="text" placeholder="Требуемый материал"/><span class="custom-input-label__input-title">Требуемый материал</span>
+									</label>
 								</div>
 							</div>
 							<div class="col-12">
 								<div class="sCreateObject__input-wrap form-group"><textarea class="sCreateObject__input form-control" name="textarea" placeholder="Введите описание объекта"></textarea>
 								</div>
 								<!-- +e.input-wrap-->
+							</div>
+							<div class="col-12">
+								<div class="plan-block"><img class="res-i" src="img/plan-d.png" alt="">
+									<div class="plan-block__info">
+										<p class="row"><span class="col">Площадь</span><span class="col-auto">32</span></p>
+										<p class="row"><span class="col">Площадь стен</span><span class="col-auto">324</span></p>
+										<p class="row"><span class="col">Площадь потолка</span><span class="col-auto">322</span></p>
+										<p class="row"><span class="col">Площадь пола</span><span class="col-auto">322</span></p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -63,7 +96,16 @@
 							</div>
 							<div class="col-12">
 								<div class="sCreateObject__item">
-									<p>Бригада</p><a href="#">Не выбрано</a>
+									<p>Бригада</p>
+									<div class="custom-select-wrap custom-select-wrap--simple">
+										<select class="basic-select basic-select--js" data-placeholder="Не выбрано">
+											<option></option>
+											<option>Бригада №1</option>
+											<option>Бригада №2</option>
+											<option>Бригада №3</option>
+											<option>Бригада №4</option>
+										</select>
+									</div>
 								</div>
 							</div>
 							<div class="col-12">
