--- a/public/01-info-object-d.html
+++ b/public/01-info-object-d.html
@@ -100,8 +100,22 @@
 					</div>
 					<!-- start sPageInfo-->
 					<div class="sPageInfo section" id="sPageInfo">
-						<div class="sPageInfo__continer container-fluid">
-							<div class="sPageInfo__wrap bg-wrap"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+						<div class="sPageInfo__continer container-fluid tabs">
+							<div class="sPageInfo__wrap bg-wrap">
+								<div class="tabs__wrap">
+									<div class="tabs__content active"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="tabs__content"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="tabs__content"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="tabs__content"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="tabs__content"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+									</div>
+									<div class="tabs__content"><img class="object-fit-js picture-bg" src="img/service-1.jpg" alt="" loading="lazy"/>
+									</div>
+								</div>
 								<div class="sPageInfo__row row">
 									<div class="sPageInfo__section-title-col col-md">
 										<div class="section-title">
@@ -228,8 +242,8 @@
 										</div>
 									</div>
 									<div class="sPageInfo__col col-md-5 col-xxl-auto">
-										<div class="sPageInfo__inner-row row">
-											<div class="col-12">
+										<div class="sPageInfo__inner-row row tabs__caption">
+											<div class="col-12 tabs__btn active">
 												<div class="work-status">
 													<div class="row">
 														<div class="col">Стяжка пола</div>
@@ -238,8 +252,8 @@
 													<div class="line" style="--w: 22%; --bgColor: #467CF4"></div>
 												</div>
 											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
+											<div class="col-12 tabs__btn">
+												<div class="work-status">
 													<div class="row">
 														<div class="col">Натяжка потолка</div>
 														<div class="col-auto fw-500">63%</div>
@@ -247,8 +261,8 @@
 													<div class="line" style="--w: 63%; --bgColor: #1DBA6F"></div>
 												</div>
 											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
+											<div class="col-12 tabs__btn">
+												<div class="work-status">
 													<div class="row">
 														<div class="col">Штукатурка стен</div>
 														<div class="col-auto fw-500">90%</div>
@@ -256,8 +270,8 @@
 													<div class="line" style="--w: 90%; --bgColor: #F4B13E"></div>
 												</div>
 											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
+											<div class="col-12 tabs__btn">
+												<div class="work-status">
 													<div class="row">
 														<div class="col">Шпаклевание стен</div>
 														<div class="col-auto fw-500">33%</div>
@@ -265,8 +279,8 @@
 													<div class="line" style="--w: 33%; --bgColor: #9A52DF"></div>
 												</div>
 											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
+											<div class="col-12 tabs__btn">
+												<div class="work-status">
 													<div class="row">
 														<div class="col">Затирка</div>
 														<div class="col-auto fw-500">100%</div>
@@ -274,8 +288,8 @@
 													<div class="line" style="--w: 100%; --bgColor: #E94410"></div>
 												</div>
 											</div>
-											<div class="col-12">
-												<div class="work-status disabled">
+											<div class="col-12 tabs__btn">
+												<div class="work-status">
 													<div class="row">
 														<div class="col">Плинтус</div>
 														<div class="col-auto fw-500">3%</div>
@@ -493,35 +507,7 @@
 						</div>
 					</div>
 					<!-- end sMainInfo-->
-				</main>
-				<div class="bottom-control-bar">
-					<div class="row">
-						<div class="col me-auto">
-							<p>Выбрано: 1 элемент(–ов)</p>
-						</div>
-						<div class="col-auto">
-							<a class="bottom-control-bar__btn btn btn-dark" href="#">
-								<svg class="icon icon-edit ">
-									<use xlink:href="img/svg/sprite.svg#edit"></use>
-								</svg><span>Изменить</span>
-							</a>
-						</div>
-						<div class="col-auto">
-							<a class="bottom-control-bar__btn btn btn-dark" href="#">
-								<svg class="icon icon-copy ">
-									<use xlink:href="img/svg/sprite.svg#copy"></use>
-								</svg><span>Дублировать</span>
-							</a>
-						</div>
-						<div class="col-auto">
-							<a class="bottom-control-bar__btn bottom-control-bar__btn--delete btn btn-dark" href="#">
-								<svg class="icon icon-delete ">
-									<use xlink:href="img/svg/sprite.svg#delete"></use>
-								</svg><span>Удалить</span>
-							</a>
-						</div>
-					</div>
-				</div><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
+				</main><img class="page-bg" src="img/svg/page-bg.svg" alt="" loading="lazy"/>
 			</div>
 		</div>
 		<script src="libs/jquery/jquery.min.js"></script>
