--- a/public/01-entrance-d.html
+++ b/public/01-entrance-d.html
@@ -84,13 +84,15 @@
 													<meta itemprop="position" content="1"/></a></li>
 											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">ЖК видный</span>
 													<meta itemprop="position" content="2"/></a></li>
-											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Дом №1</span>
+											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Дом №1</span>
 													<meta itemprop="position" content="3"/></a></li>
+											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Подъезд №2</span>
+													<meta itemprop="position" content="4"/></a></li>
 										</ol>
 									</nav>
 								</div>
 								<div class="page-head__col col-lg order-md-4">
-									<h1>Дом №1
+									<h1>Подъезд №2
 										<div class="badge badge-primary">33%</div>
 									</h1>
 								</div>
@@ -174,45 +176,45 @@
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Натяжка потолка</div>
-												<div class="col-auto fw-500">63%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 63%; --bgColor: #1DBA6F"></div>
+											<div class="line" style="--w: 22%; --bgColor: #1DBA6F"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Штукатурка стен</div>
-												<div class="col-auto fw-500">90%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 90%; --bgColor: #F4B13E"></div>
+											<div class="line" style="--w: 22%; --bgColor: #F4B13E"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Шпаклевка стен</div>
-												<div class="col-auto fw-500">33%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 33%; --bgColor: #9A52DF"></div>
+											<div class="line" style="--w: 22%; --bgColor: #9A52DF"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Затирка</div>
-												<div class="col-auto fw-500">100%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 100%; --bgColor: #E94410"></div>
+											<div class="line" style="--w: 22%; --bgColor: #E94410"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Плинтус</div>
-												<div class="col-auto fw-500">3%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 3%; --bgColor: #8B9298"></div>
+											<div class="line" style="--w: 22%; --bgColor: #8B9298"></div>
 										</div>
 									</div>
 								</div>
@@ -285,7 +287,7 @@
 												<a class="main-table__add-new" href="#">
 													<svg class="icon icon-add ">
 														<use xlink:href="img/svg/sprite.svg#add"></use>
-													</svg>Добавить подъезд
+													</svg>Добавить этаж
 												</a>
 											</td>
 										</tr>
@@ -299,11 +301,11 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">1. Подъезд №1</div>
+															<div class="h3">1. Этаж №1</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
+													<td>-</td>
 													<td>130</td>
 													<td>268</td>
 													<td>1300 м²</td>
@@ -1091,11 +1093,11 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">2. Подъезд №2</div>
+															<div class="h3">2. Этаж №2</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
+													<td>-</td>
 													<td>126</td>
 													<td>280</td>
 													<td>1291 м²</td>
@@ -1883,11 +1885,11 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">3. Подъезд №3</div>
+															<div class="h3">3. Этаж №3</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
+													<td>-</td>
 													<td>126</td>
 													<td>280</td>
 													<td>1291 м²</td>
@@ -2675,11 +2677,11 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">4. Подъезд №4</div>
+															<div class="h3">4. Этаж №4</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
+													<td>-</td>
 													<td>126</td>
 													<td>280</td>
 													<td>1291 м²</td>
