--- a/public/01-apt-d.html
+++ b/public/01-apt-d.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Дом №1</title>
+		<title>Квартира №32</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -84,13 +84,19 @@
 													<meta itemprop="position" content="1"/></a></li>
 											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">ЖК видный</span>
 													<meta itemprop="position" content="2"/></a></li>
-											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Дом №1</span>
+											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Дом №1</span>
 													<meta itemprop="position" content="3"/></a></li>
+											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Подъезд №2</span>
+													<meta itemprop="position" content="4"/></a></li>
+											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Этаж №2</span>
+													<meta itemprop="position" content="5"/></a></li>
+											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Квартира №32</span>
+													<meta itemprop="position" content="6"/></a></li>
 										</ol>
 									</nav>
 								</div>
 								<div class="page-head__col col-lg order-md-4">
-									<h1>Дом №1
+									<h1>Квартира №32
 										<div class="badge badge-primary">33%</div>
 									</h1>
 								</div>
@@ -127,18 +133,6 @@
 									<div class="details-with-toggle__wrap">
 										<div class="details-with-toggle__stats-row details-with-toggle__stats-row--without-span row">
 											<div class="details-with-toggle__col col-md-auto">
-												<div class="details-with-toggle__item"><span>Этаж</span>
-													<p>7 эт
-													</p>
-												</div>
-											</div>
-											<div class="details-with-toggle__col col-md-auto">
-												<div class="details-with-toggle__item"><span>Квартиры</span>
-													<p>728 кв
-													</p>
-												</div>
-											</div>
-											<div class="details-with-toggle__col col-md-auto">
 												<div class="details-with-toggle__item"><span>Помещения</span>
 													<p>1350 пом
 													</p>
@@ -174,45 +168,45 @@
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Натяжка потолка</div>
-												<div class="col-auto fw-500">63%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 63%; --bgColor: #1DBA6F"></div>
+											<div class="line" style="--w: 22%; --bgColor: #1DBA6F"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Штукатурка стен</div>
-												<div class="col-auto fw-500">90%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 90%; --bgColor: #F4B13E"></div>
+											<div class="line" style="--w: 22%; --bgColor: #F4B13E"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Шпаклевка стен</div>
-												<div class="col-auto fw-500">33%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 33%; --bgColor: #9A52DF"></div>
+											<div class="line" style="--w: 22%; --bgColor: #9A52DF"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Затирка</div>
-												<div class="col-auto fw-500">100%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 100%; --bgColor: #E94410"></div>
+											<div class="line" style="--w: 22%; --bgColor: #E94410"></div>
 										</div>
 									</div>
 									<div class="col-sm-6 col-lg-4 col-xl-3">
 										<div class="work-status">
 											<div class="row">
 												<div class="col">Плинтус</div>
-												<div class="col-auto fw-500">3%</div>
+												<div class="col-auto fw-500">22%</div>
 											</div>
-											<div class="line" style="--w: 3%; --bgColor: #8B9298"></div>
+											<div class="line" style="--w: 22%; --bgColor: #8B9298"></div>
 										</div>
 									</div>
 								</div>
@@ -285,7 +279,7 @@
 												<a class="main-table__add-new" href="#">
 													<svg class="icon icon-add ">
 														<use xlink:href="img/svg/sprite.svg#add"></use>
-													</svg>Добавить подъезд
+													</svg>Добавить этаж
 												</a>
 											</td>
 										</tr>
@@ -299,13 +293,13 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">1. Подъезд №1</div>
+															<div class="h3">1. Кухня</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
-													<td>130</td>
-													<td>268</td>
+													<td>-</td>
+													<td>-</td>
+													<td>-</td>
 													<td>1300 м²</td>
 													<td>
 														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>321</span>/433
@@ -1091,13 +1085,13 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">2. Подъезд №2</div>
+															<div class="h3">2. Спальня</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
-													<td>126</td>
-													<td>280</td>
+													<td>-</td>
+													<td>-</td>
+													<td>-</td>
 													<td>1291 м²</td>
 													<td>
 														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
@@ -1883,13 +1877,13 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">3. Подъезд №3</div>
+															<div class="h3">3. Санузел</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
-													<td>126</td>
-													<td>280</td>
+													<td>-</td>
+													<td>-</td>
+													<td>-</td>
 													<td>1291 м²</td>
 													<td>
 														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
@@ -2675,13 +2669,13 @@
 															</a>
 															<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 															</label>
-															<div class="h3">4. Подъезд №4</div>
+															<div class="h3">4. Спальня</div>
 														</div>
 													</td>
 													<td>-</td>
-													<td>12</td>
-													<td>126</td>
-													<td>280</td>
+													<td>-</td>
+													<td>-</td>
+													<td>-</td>
 													<td>1291 м²</td>
 													<td>
 														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
