--- a/public/01-room-d.html
+++ b/public/01-room-d.html
@@ -274,7 +274,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="col col-md-12 order-md-last">
+									<div class="col col-md-12 order-md-last me-auto">
 										<div class="custom-select-wrap custom-select-wrap--second-type">
 											<div class="custom-select-wrap__label text-secondary">Сортировать по
 											</div>
@@ -286,7 +286,7 @@
 											</select>
 										</div>
 									</div>
-									<div class="col-auto ms-auto">
+									<div class="col-auto ms-md-auto">
 										<a class="sMainInfo__reset" href="#">Сбросить
 										</a>
 									</div>
