--- a/public/01-room-info-d.html
+++ b/public/01-room-info-d.html
@@ -25,7 +25,7 @@
 			}
 		</script>
 	</head>
-	<body class="main-page" data-bg="01-3-house.jpg">
+	<body class="room-page" data-bg="01-3-house.jpg">
 		<div class="main-wrapper">
 			<aside> 
 				<div class="aside-wrap">
@@ -127,6 +127,51 @@
 							</div>
 						</div>
 					</div>
+					<!-- start sObjectDetails-->
+					<div class="sObjectDetails section" id="sObjectDetails">
+						<div class="container-fluid">
+							<div class="sObjectDetails__header">
+								<div class="details-with-toggle details-with-toggle--js">
+									<div class="details-with-toggle__wrap">
+										<div class="details-with-toggle__stats-row details-with-toggle__stats-row--without-span row">
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Этаж</span>
+													<p>7 эт
+													</p>
+												</div>
+											</div>
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Квартиры</span>
+													<p>728 кв
+													</p>
+												</div>
+											</div>
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Помещения</span>
+													<p>1350 пом
+													</p>
+												</div>
+											</div>
+											<div class="details-with-toggle__col col-md-auto">
+												<div class="details-with-toggle__item"><span>Площадь</span>
+													<p>S 3440 м²
+													</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<button class="details-with-toggle__btn-more btn d-md-none">
+										<div class="show">Подробнее</div>
+										<div class="hide">Свернуть</div>
+										<svg class="icon icon-chevron-down ">
+											<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+										</svg>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- end sObjectDetails-->
 					<!-- start sMainInfo-->
 					<div class="sMainInfo section" id="sMainInfo">
 						<div class="container-fluid">
