--- a/public/01-2-object-schedule.html
+++ b/public/01-2-object-schedule.html
@@ -1593,7 +1593,7 @@
 				<div class="bottom-control-bar">
 					<div class="row">
 						<div class="col me-auto">
-							<p>Выбрано: 1 элемент(–ов)</p>
+							<p>Выбрано: <span></span> элемент(–ов)</p>
 						</div>
 						<div class="col-auto">
 							<a class="bottom-control-bar__btn btn btn-dark" href="#">
