--- a/public/index.html
+++ b/public/index.html
@@ -88,20 +88,14 @@
 						<div class="container-fluid">
 							<div class="sObject__head-row row">
 								<div class="col-auto ms-auto ms-md-0 me-auto me-md-0">
-									<div class="custom-select-wrap custom-select-wrap--first-type">
+									<div class="custom-select-wrap custom-select-wrap--first-type" data-number="5">
 										<select class="basic-select basic-select--js">
-											<option>1</option>
-											<option>2</option>
-											<option>3</option>
-											<option>4</option>
-											<option>5</option>
-											<option>6</option>
-											<option>7</option>
-											<option>8</option>
-											<option>9</option>
-											<option>10</option>
+											<option>Все статусы</option>
+											<option>Планирование</option>
+											<option>В работе</option>
+											<option>Все статусы</option>
 										</select>
-										<div class="custom-select-wrap__label">Все статусы<span></span>
+										<div class="custom-select-wrap__label">1
 										</div>
 									</div>
 								</div>
